Add general calculator divs

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div id="calculator">
+        <div id="head"></div>
+        <div id="left-buttons"></div>
+        <div id="right-buttons"></div>
+    </div>
     
 </body>
 </html>
