Setup basic frontend calculator and buttons

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
     <div id="calculator">
         <div id="head"></div>
-        <div id="left-buttons"></div>
-        <div id="right-buttons"></div>
+        <div id="body">
+            <div id="button-container"></div>
+        </div>
     </div>
     
 </body>
