--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div id="calculator">
-        <div id="head"></div>
+        <div id="head">
+            <div id="screen">0</div>
+        </div>
         <div id="body">
             <div id="button-container"></div>
         </div>
