Display values on screen upon button press

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="calculator">
         <div id="head">
-            <div id="screen">0</div>
+            <div id="screen"></div>
         </div>
         <div id="body">
             <div id="button-container"></div>
