Allow for more operations after = button is pressed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <div id="calculator">
         <div id="head">
-            <div id="screen"></div>
+            <div id="border">
+                <div id="screen"></div>
+            </div>
         </div>
         <div id="body">
             <div id="button-container"></div>
